--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="buttons">
-        <button>Rock</button>
-        <button>Paper</button>
-        <button>Scissors</button>
+    <div class="container">
+        <div class="buttons">
+            <button>Rock</button>
+            <button>Paper</button>
+            <button>Scissors</button>
+        </div>
     </div>
 </body>
 </html>
