Added score and round counters

--- a/index.html
+++ b/index.html
@@ -10,10 +10,27 @@
 </head>
 <body>
     <div class="container">
+        <div class="title">
+            <h1>Rock, paper, scissors!</h1>
+        </div>
+        <div class="round">
+            <p>Round: <p>&nbsp;
+            <p class="number">1</p>
+        </div>
         <div class="buttons">
             <button>Rock</button>
             <button>Paper</button>
             <button>Scissors</button>
+        </div>
+        <div class="scores">
+            <div class="myscore">
+                <p style="margin-right:5px">My score: </p>
+                <p class="ms">0</p>
+            </div>
+            <div class="computerscore">
+                <p style="margin-right:5px">Computer score: </p>
+                <p class="cs">0</p>
+            </div>
         </div>
     </div>
 </body>
